--- a/detail/detail_02.html
+++ b/detail/detail_02.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="../css/style.css">
         <script src="https://kit.fontawesome.com/70d18a5d5a.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css">
+        <link rel="shortcut icon" href="../img/favicon/favicon.ico">
+        <link rel="apple-touch-icon" href="../img/favicon/apple-touch-icon.png">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script>
     </head>
@@ -34,7 +36,7 @@
                     <p class="works-img"><img src="../img/details/works_02.gif"></p>
                 </section>
                 <section>
-                    <h3>社外向け動画製作</h3>
+                    <h3>社外向け動画製作（1分程度）</h3>
                     <h4>ターゲット</h4>
                     <p class="detail-txt">就職活動を控えた高校生</p>
                 </section>
