--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,8 @@
         <meta name="description" content="Portfolio | プロフィール">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css">
+        <link rel="shortcut icon" href="../img/favicon/favicon.ico">
+        <link rel="apple-touch-icon" href="../img/favicon/apple-touch-icon.png">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script>
     </head>
