--- a/detail/detail_07.html
+++ b/detail/detail_07.html
@@ -48,7 +48,7 @@
                 </section>
                 <section>
                     <h4>製作について</h4>
-                    <p class="detail-txt">illustratorの操作に慣れるため試行錯誤している時にできた？もの。</p>
+                    <p class="detail-txt">Illustratorの操作に慣れるため試行錯誤している時にできた？もの。</p>
                 </section>
             </article>
             <section class="move">
