--- a/detail/detail_09.html
+++ b/detail/detail_09.html
@@ -48,7 +48,7 @@
                 </section>
                 <section>
                     <h4>製作について</h4>
-                    <p class="detail-txt">illustratorの操作に慣れるため空き時間などに取り組んでいる作字の１つ。
+                    <p class="detail-txt">Illustratorの操作に慣れるため空き時間などに取り組んでいる作字の１つ。
                     <br>その時の気分や目についた文字列からスケッチを起こして製作している。
                     <br>これはコントラスト・強調を極端に表現しようと意識して製作に取り組んだ。
                     </p>
