--- a/detail/detail_12.html
+++ b/detail/detail_12.html
@@ -48,7 +48,7 @@
                 </section>
                 <section>
                     <h4>製作について</h4>
-                    <p class="detail-txt">illustratorの操作に慣れるため空き時間などに取り組んでいる作字の１つ。
+                    <p class="detail-txt">Illustratorの操作に慣れるため空き時間などに取り組んでいる作字の１つ。
                     <br>その時の気分や目についた文字列からスケッチを起こして製作している。
                     <br>文言は太宰治の同名作品から採用した（丁度読み返していたため）。
                     <br>独特なセンスのおしゃれを希求し周囲からズレていき空回りする主人公を意識した。
