--- a/detail/detail_03.html
+++ b/detail/detail_03.html
@@ -80,8 +80,8 @@
                 </section>
                 <section>
                     <h4>製作について</h4>
-                    <p class="detail-txt">知人が起業する（予定の）企業ロゴのデザイン依頼を受けて取り組んだ。
-                    <br>人との繋がりをキーワードに、会社名の文字列及びそこから連想されるモチーフをイメージしてデザインを行った。
+                    <p class="detail-txt">知人が起業する（予定の）企業ロゴのデザインとホームページの作成依頼を受けて取り組んだ。
+                    <br>ロゴは人との繋がりをキーワードに、会社名の文字列及びそこから連想されるモチーフ（繋がり＝リンクのマーク）をイメージしてデザインを行った。
                     </p>
                 </section>
             </article>
