--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li><a href="detail/detail_01.html"><img src="img/thumbnail/works_01.jpg" ></a></li>
                     <li><a href="detail/detail_02.html"><img src="img/thumbnail/works_02.jpg"></a></li>
                     <li><a href="detail/detail_03.html"><img src="img/thumbnail/works_03.jpg"></a></li>
+                    <li><a href="detail/detail_04.html"><img src="img/thumbnail/works_04.jpg"></a></li>
                     <li><a href="detail/detail_05.html"><img src="img/thumbnail/works_05.jpg"></a></li>
                     <li><a href="detail/detail_06.html"><img src="img/thumbnail/works_06.jpg"></a></li>
                     <li><a href="detail/detail_07.html"><img src="img/thumbnail/works_07.jpg"></a></li>
