--- a/detail/detail_14.html
+++ b/detail/detail_14.html
@@ -62,9 +62,9 @@
                     </script>
                 </div>
                 <section>
-                    <h3>ラッピングペーパーのデザイン-2</h3>
+                    <h3>ラッピングペーパーのデザイン-1</h3>
                     <h4>ターゲット</h4>
-                    <p class="detail-txt">個人的な親友2人</p>
+                    <p class="detail-txt">家族</p>
                 </section>
                 <section>
                     <h4>目的</h4>
@@ -72,14 +72,16 @@
                 </section>
                 <section>
                     <h4>使用ツール</h4>
-                    <p class="detail-txt">Illustrator</p>
+                    <p class="detail-txt">Illustrator／FireAlpaca</p>
+                </section>
+                <section>
+                    <h4>製作期間</h4>
+                    <p class="detail-txt">5時間</p>
                 </section>
                 <section>
                     <h4>製作について</h4>
-                    <p class="detail-txt">学生時代、誕生日が連続する親友2人の当時22歳の誕生日プレゼントのために包装紙をデザインした。
-                    <br>前向きな意味とそのまま年齢の意味を込めてピースサインを散りばめたパターンにした。
-                    <br>名前を入れた部分は共通項の多い友人達であること、誕生日が連続することの類似性やお揃い感を意識した。
-                    <br>合わせてそれぞれの好きな色で名前の刺繍を施したトートバッグも贈った。</p>
+                    <p class="detail-txt">サプライズで用意したプレゼントをラッピングする際、既製品では味気なく感じたためパターンを起こして包装紙を製作した。モチーフはきょうだいが幼い頃から家族全員で親しんでいる（家族にとってはシンボル的存在の）ぬいぐるみのイラストをメインに、お祝いのメッセージを散りばめた。
+                    <br>ぱっと見は既製品だが、目を凝らすとオリジナル、というささやかなサプライズを込めつつ、カラーバリエーションを複数用意し、ラッピングして渡した時のわくわく感を狙った。</p>
                 </section>
             </article>
             <section class="move">
