--- a/detail/detail_05.html
+++ b/detail/detail_05.html
@@ -32,60 +32,27 @@
         </header>   
         <main class="animsition">
             <article class="works-description" data-animsition-out-class="fade-out">
-                <div class="detail-top">
-                    <section class="siema">
-                        <p class="works-img"><img src="../img/details/works_05_01.png"></p>
-                        <p class="works-img"><img src="../img/details/works_05_02.png"></p>
-                    </section>
-                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
-                    <button class="next"><i class="fas fa-chevron-right"></i></button>       
-                    <script src="siema.min.js"></script>
-                    <script>                    
-                        const mySiema = new Siema({
-                            selector: '.siema',
-                            duration: 200,
-                            easing: 'ease-in',
-                            perPage: 1,
-                            startIndex: 0,
-                            draggable: false,
-                            multipleDrag: true,
-                            threshold: 10,
-                            loop: true,
-                            rtl: false,
-                            onInit: () => {},
-                            onChange: () => {},
-                        });
-                        setInterval(() => mySiema.next(), 10000);
-                        document.querySelector('.prev').addEventListener('click',() => mySiema.prev());
-                        document.querySelector('.next').addEventListener('click',() => mySiema.next());
-                    </script>
-                </div>                
                 <section>
-                    <h3>社内向けマニュアル作成</h3>
+                    <p class="works-img"><img src="../img/details/works_05.png"></p>
+                </section>                
+                <section>
+                    <h3>社内掲示物（社内システム紹介ポスター</h3>
                     <h4>ターゲット</h4>
-                    <p class="detail-txt">社内製品組立作業者</p>
-                </section>
-                <section>
-                    <h4>目的</h4>
-                    <p class="detail-txt">電子帳票ソリューションサービスi-Reporterの社内展開・基本操作方法の周知</p>
-                </section>
-                <section>
-                    <h4>担当</h4>
-                    <p class="detail-txt">製作全般（約20ページ・PDFにて発行）</p>
+                    <p class="detail-txt">社内従業員・来訪者</p>
                 </section>
                 <section>
                     <h4>使用ツール</h4>
-                    <p class="detail-txt">Illustrator／Photoshop</p>
+                    <p class="detail-txt">Illustrator</p>
                 </section>
                 <section>
                     <h4>製作期間</h4>
-                    <p class="detail-txt">1週間程度</p>
+                    <p class="detail-txt">約1週間</p>
                 </section>
                 <section>
                     <h4>製作について</h4>
-                    <p class="detail-txt">ターゲットの年齢層が広く、iPadやPCなど、デジタル機器の業務内での取り扱いに慣れていない人も多い中、
-                    サービスを社内に広く展開していく必要があったため、分かりやすさ・伝わりやすさを意識して製作した。
-                    <br>何度も手順を追いながら、自分は当たり前のこととしてスキップしてしまっている手順がないか確認し、画面遷移や入力内容が分かるようこまめに画像や図を挿入した。</p>
+                    <p class="detail-txt">システム導入による効果を十分にアピールできるよう、導入前に抱えていた課題についても内容に取り入れた。
+                    <br>初見の人でもシステムの特徴や効果をイメージしやすいよう、イラスト素材を選定し配置した。
+                    </p>
                 </section>
             </article>
             <section class="move">
