--- a/detail/detail_07.html
+++ b/detail/detail_07.html
@@ -34,9 +34,11 @@
             <article class="works-description" data-animsition-out-class="fade-out">
                 <section>
                     <p class="works-img"><img src="../img/details/works_07.png"></p>
-                </section>
+                </section>                
                 <section>
-                    <h3>趣味-1</h3>
+                    <h3>社内向けサービス内で使用するアイコン作成</h3>
+                    <h4>ターゲット</h4>
+                    <p class="detail-txt">社内製品組立作業者</p>
                 </section>
                 <section>
                     <h4>使用ツール</h4>
@@ -44,20 +46,22 @@
                 </section>
                 <section>
                     <h4>製作期間</h4>
-                    <p class="detail-txt">1時間程度</p>
+                    <p class="detail-txt">30分</p>
                 </section>
                 <section>
                     <h4>製作について</h4>
-                    <p class="detail-txt">Illustratorの操作に慣れるため試行錯誤している時にできた？もの。</p>
+                    <p class="detail-txt">サービス内で使用するアイコンをデザインした。
+                    <br>各機能をイメージしやすいモチーフを採用し、背景色は社内現場で使用している机の色をイメージした。
+                    </p>
                 </section>
             </article>
             <section class="move">
                 <ul>
                     <li><a href="detail_06.html">前へ</a></li>
-                    <li><a href="..//index.html">作品TOPへ</a></li>
+                    <li><a href="../index.html">作品TOPへ</a></li>
                     <li><a href="detail_08.html">次へ</a></li>
                 </ul>
-            </section>
+            </section>           
         </main>
         <footer class="foot-area">　
             <p class="footer-txt">&copy;2021 Haru koda.</p>        
