--- a/detail/detail_10.html
+++ b/detail/detail_10.html
@@ -30,13 +30,13 @@
                 </nav>
             </div>
         </header>   
-        <main class="animsition" data-animsition-out-class="fade-out">
-            <article class="works-description">
+        <main class="animsition">
+            <article class="works-description" data-animsition-out-class="fade-out">
                 <section>
                     <p class="works-img"><img src="../img/details/works_10.png"></p>
                 </section>
                 <section>
-                    <h3>趣味-4・作字</h3>
+                    <h3>趣味-3・作字</h3>
                 </section>
                 <section>
                     <h4>使用ツール</h4>
@@ -50,7 +50,7 @@
                     <h4>製作について</h4>
                     <p class="detail-txt">Illustratorの操作に慣れるため空き時間などに取り組んでいる作字の１つ。
                     <br>その時の気分や目についた文字列からスケッチを起こして製作している。
-                    <br>この製作時はとにかく寒すぎてこの文言しか思い浮かばなかった。
+                    <br>これはコントラスト・強調を極端に表現しようと意識して製作に取り組んだ。
                     </p>
                 </section>
             </article>
