--- a/detail/detail_13.html
+++ b/detail/detail_13.html
@@ -32,56 +32,27 @@
         </header>   
         <main class="animsition">
             <article class="works-description" data-animsition-out-class="fade-out">
-                <div class="detail-top">
-                    <section class="siema">
-                        <p class="works-img"><img src="../img/details/works_13_01.png"></p>
-                        <p class="works-img"><img src="../img/details/works_13_02.png"></p>
-                        <p class="works-img"><img src="../img/details/works_13_03.png"></p>
-                    </section>
-                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
-                    <button class="next"><i class="fas fa-chevron-right"></i></button>       
-                    <script src="siema.min.js"></script>
-                    <script>                    
-                        const mySiema = new Siema({
-                            selector: '.siema',
-                            duration: 200,
-                            easing: 'ease-in',
-                            perPage: 1,
-                            startIndex: 0,
-                            draggable: false,
-                            multipleDrag: true,
-                            threshold: 10,
-                            loop: true,
-                            rtl: false,
-                            onInit: () => {},
-                            onChange: () => {},
-                        });
-                        setInterval(() => mySiema.next(), 10000);
-                        document.querySelector('.prev').addEventListener('click',() => mySiema.prev());
-                        document.querySelector('.next').addEventListener('click',() => mySiema.next());
-                    </script>
-                </div>
                 <section>
-                    <h3>ラッピングペーパーのデザイン-1</h3>
-                    <h4>ターゲット</h4>
-                    <p class="detail-txt">家族</p>
+                    <p class="works-img"><img src="../img/details/works_13.png"></p>
                 </section>
                 <section>
-                    <h4>目的</h4>
-                    <p class="detail-txt">誕生日祝い</p>
+                    <h3>趣味-6・作字</h3>
                 </section>
                 <section>
                     <h4>使用ツール</h4>
-                    <p class="detail-txt">Illustrator／FireAlpaca</p>
+                    <p class="detail-txt">Illustrator</p>
                 </section>
                 <section>
                     <h4>製作期間</h4>
-                    <p class="detail-txt">5時間</p>
+                    <p class="detail-txt">4時間</p>
                 </section>
                 <section>
                     <h4>製作について</h4>
-                    <p class="detail-txt">サプライズで用意したプレゼントをラッピングする際、既製品では味気なく感じたためパターンを起こして包装紙を製作した。モチーフはきょうだいが幼い頃から家族全員で親しんでいる（家族にとってはシンボル的存在の）ぬいぐるみのイラストをメインに、お祝いのメッセージを散りばめた。
-                    <br>ぱっと見は既製品だが、目を凝らすとオリジナル、というささやかなサプライズを込めつつ、カラーバリエーションを複数用意し、ラッピングして渡した時のわくわく感を狙った。</p>
+                    <p class="detail-txt">Illustratorの操作に慣れるため空き時間などに取り組んでいる作字の１つ。
+                    <br>その時の気分や目についた文字列からスケッチを起こして製作している。
+                    <br>文言は太宰治の同名作品から採用した（丁度読み返していたため）。
+                    <br>独特なセンスのおしゃれを希求し周囲からズレていき空回りする主人公を意識した。
+                    </p>
                 </section>
             </article>
             <section class="move">
