--- a/detail/detail_04.html
+++ b/detail/detail_04.html
@@ -66,7 +66,7 @@
                     </script>
                 </div>
                 <section>
-                    <h3>社内デジタルサイネージシステム開発・画面制作</h3>
+                    <h3>社内デジタルサイネージシステム開発</h3>
                 </section>
                 <section>
                     <h4>担当</h4>
