--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <li><a href="detail/detail_13.html"><img src="img/thumbnail/works_13.jpg"></a></li>                 
                     <li><a href="detail/detail_14.html"><img src="img/thumbnail/works_14.jpg"></a></li>                 
                     <li><a href="detail/detail_15.html"><img src="img/thumbnail/works_15.jpg"></a></li>                 
+                    <li><a href="detail/detail_16.html"><img src="img/thumbnail/works_16.jpg"></a></li>                 
                 </ul>
             </section>           
         </main>
