--- a/about/index.html
+++ b/about/index.html
@@ -77,15 +77,15 @@
                                 </tr>
                                 <tr>
                                     <td class="skill-item">Adobe After Effects CC</td>
-                                    <td class="skill-level">簡単な動画作成・編集<br>（社内向け資料用・社外向けイベント用）（約1年）</td>
+                                    <td class="skill-level">簡単な動画作成・編集<br>（社内向け資料用・社外向けイベント用）（1年未満）</td>
                                 </tr>
                                 <tr>
                                     <td class="skill-item">Adobe Premiere Pro CC</td>
-                                    <td class="skill-level">簡単な動画作成・編集<br>（社内向け資料用・社外向けイベント用）（約1年）</td>
+                                    <td class="skill-level">簡単な動画作成・編集<br>（社内向け資料用・社外向けイベント用）（1年未満）</td>
                                 </tr>
                                 <tr>
                                     <td class="skill-item">Adobe XD</td>
-                                    <td class="skill-level">Webサイトのデザイン・プロトタイプ作成（約1年）</td>
+                                    <td class="skill-level">Webサイトのデザイン・プロトタイプ作成（1年未満）</td>
                                 </tr>
                             </table>
                             <h5>その他</h5>
