--- a/detail/detail_03.html
+++ b/detail/detail_03.html
@@ -36,6 +36,7 @@
                     <section class="siema">
                         <p class="works-img"><img src="../img/details/works_03_01.png"></p>
                         <p class="works-img"><img src="../img/details/works_03_02.png"></p>
+                        <p class="works-img"><img src="../img/details/works_03_03.png"></p>
                     </section>
                     <button class="prev"><i class="fas fa-chevron-left"></i></button>
                     <button class="next"><i class="fas fa-chevron-right"></i></button>       
@@ -64,7 +65,7 @@
                     <p class="works-img"><img src="../../img/details/works_03.png"></p>
                 </section>                 -->
                 <section>
-                    <h3>企業ロゴ・ホームページ（未公開）製作</h3>
+                    <h3>企業ロゴ・ホームページ製作（未公開）</h3>
                 </section>
                 <section>
                     <h4>担当</h4>
